# OmniTool

./: .gitignore  .taurignore  NOTICE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/core/: asset_id.rs  codec.rs  config.rs  crc32.rs  crc64.rs  dat1.rs  ddl.rs  error.rs  filesystem.rs  fnv.rs  math.rs  mod.rs  references.rs  toc.rs
src-tauri/src/tools/: mod.rs  texture_converter.rs  texture_preview.rs
src-tauri/src/tools/model_converter/: ascii_reader.rs  ascii_writer.rs  mod.rs  model.rs
src-tauri/src/tools/model_converter/sections/: built.rs  geo.rs  joints.rs  look.rs  meshes.rs  mod.rs  skin.rs
src-tauri/src/tools/wwise/: bnk.rs  mod.rs  soundbank.rs  wem.rs  wwiselookup.rs  xml_import.rs
src/components/icons/: OmniToolIcon.tsx
src/components/layout/: Shell.module.css  Shell.tsx  Sidebar.module.css  Sidebar.tsx  Titlebar.module.css  Titlebar.tsx
src/components/shared/: AssetReferencesModal.module.css  AssetReferencesModal.tsx  CustomAudioPlayer.module.css  CustomAudioPlayer.tsx  FilePickerInput.module.css  FilePickerInput.tsx  SendToStagerModal.module.css  SendToStagerModal.tsx  SettingsModal.module.css  SettingsModal.tsx  SoundbankViewer.tsx  StatusLog.module.css  StatusLog.tsx  TextureViewer.tsx  WemViewer.tsx
src/contexts/: ProjectsContext.tsx  SettingsContext.tsx
src/pages/: Home.module.css  Home.tsx
src/styles/: global.css
src/tools/: registry.tsx
src/tools/asset-browser/: AssetBrowser.module.css  AssetBrowser.tsx  TreeView.tsx
src/tools/atmosphere-editor/: AtmosphereEditor.module.css  AtmosphereEditor.tsx
src/tools/bnk-explorer/: BnkExplorer.module.css  BnkExplorer.tsx
src/tools/config-editor/: ConfigEditor.module.css  ConfigEditor.tsx
src/tools/material-remapper/: MaterialRemapper.module.css  MaterialRemapper.tsx
src/tools/model-converter/: ModelConverter.module.css  ModelConverter.tsx
src/tools/stager/: Stager.module.css  Stager.tsx  StagerTreeView.module.css  StagerTreeView.tsx
src/tools/texture-converter/: TextureConverter.module.css  TextureConverter.tsx
src/tools/wwise-patcher/: WwisePatcher.module.css  WwisePatcher.tsx
src/tools/zonelightbin-module/: ZoneLightBinModule.module.css  ZoneLightBinModule.tsx
src/utils/: disableBrowserDefaults.ts  openToolWindow.ts  sendToRoutes.ts
