[package]
name = "omnitool"
version = "0.4.0"
edition = "2021"
default-run = "OmniTool"

[features]
dev-tools = []

[lib]
name = "omnitool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "OmniTool"
path = "src/main.rs"

[[bin]]
name = "diag"
path = "src/bin/diag.rs"
required-features = ["dev-tools"]

[[bin]]
name = "dump_subset"
path = "src/bin/dump_subset.rs"
required-features = ["dev-tools"]

[[bin]]
name = "inject_once"
path = "src/bin/inject_once.rs"
required-features = ["dev-tools"]

[[bin]]
name = "roundtrip"
path = "src/bin/roundtrip.rs"
required-features = ["dev-tools"]

[[bin]]
name = "sections"
path = "src/bin/sections.rs"
required-features = ["dev-tools"]

[[bin]]
name = "check_actor_hashes"
path = "src/bin/check_actor_hashes.rs"
required-features = ["dev-tools"]

[[bin]]
name = "roundtrip_actor"
path = "src/bin/roundtrip_actor.rs"
required-features = ["dev-tools"]

[[bin]]
name = "toc_asset_diag"
path = "src/bin/toc_asset_diag.rs"
required-features = ["dev-tools"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri          = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs     = "2"
serde          = { version = "1", features = ["derive"] }
serde_json     = { version = "1", features = ["preserve_order"] }
byteorder      = "1"
lz4_flex       = "0.11"
glam           = "0.29"
thiserror      = "2"
log            = "0.4"
flate2         = "1"
zip            = "2"
walkdir        = "2"
tauri-plugin-shell = "2"
libloading     = "0.8"
ureq           = { version = "2", features = ["tls"] }
texture2ddecoder = "0.1.2"
image = "0.25.10"
base64 = "0.22.1"
dirs = "5"
rayon = "1"
memmap2 = "0.9"
dashmap = "6"
sysinfo = { version = "0.32", default-features = false, features = ["system"] }
ww2ogg = "0.1"

[profile.release]
opt-level    = 3
lto          = true
codegen-units = 1
panic        = "abort"
strip        = true
